templates/tetragon-policy-builder_template.yaml
---
# Source: tetragon-policy-builder/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-tetragon-policy-builder
  labels:
    helm.sh/chart: tetragon-policy-builder-0.1.1
    app.kubernetes.io/name: tetragon-policy-builder
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels: {}
  ingress:
    - from:
        - podSelector: {}
---
# Source: tetragon-policy-builder/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-tetragon-policy-builder
  labels:
    helm.sh/chart: tetragon-policy-builder-0.1.1
    app.kubernetes.io/name: tetragon-policy-builder
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tetragon-policy-builder
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tetragon-policy-builder
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-tetragon-policy-builder
      containers:
        - name: policy-builder
          image: "ghcr.io/camptocamp/tetragon-policy-builder:master"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            {}
